--- a/sweeps/tca.yaml
+++ b/sweeps/tca.yaml
@@ -1,9 +1,9 @@
 program: src/train.py
 method: bayes
-name: tca-soybean-sorghum
-entity: user
+name: N_tca-soybean-maize
+entity: marleen-streicher
 project: hsr
-run_cap: 100
+run_cap: 300
 command:
   - ${env}
   - ${interpreter}
@@ -11,16 +11,16 @@ command:
   - ${args}
   - --use_wandb
   - --model=TCA
-  - --label=LMA
+  - --label=N
   - --source_domain=soybean
-  - --target_domain=sorghum
+  - --target_domain=maize
   - --sweep
 metric:
   name: source_r
   goal: maximize
 parameters:
   n_components:
-    values: [2, 10, 20, 30, 40, 50, 60, 70, 80, 85, 90, 100, 200, 300, 500]
+    values: [2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]
   mu:
     values: [0.0001, 0.001, 0.1, 1.0, 2.0]
   kernel:
