--- a/sweeps/plsr.yaml
+++ b/sweeps/plsr.yaml
@@ -1,18 +1,18 @@
 program: src/train.py
 method: bayes
-name: N_coral-maize-sorghum
+name: N_plsr-camelina-sorghum
 entity: marleen-streicher
 project: hsr
-run_cap: 300
+run_cap: 100
 command:
   - ${env}
   - ${interpreter}
   - ${program}
   - ${args}
   - --use_wandb
-  - --model=CORAL
+  - --model=PLSR
   - --label=N
-  - --source_domain=maize
+  - --source_domain=camelina
   - --target_domain=sorghum
   - --sweep
 metric:
@@ -21,5 +21,3 @@ metric:
 parameters:
   n_components:
     values: [2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75]
-  lambda_value:
-    values: [0.1, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0]
