--- a/sweeps/plsr.yaml
+++ b/sweeps/plsr.yaml
@@ -1,7 +1,7 @@
 program: src/train.py
 method: bayes
 name: N_plsr-camelina-sorghum
-entity: marleen-streicher
+entity: user
 project: hsr
 run_cap: 100
 command:
