--- a/sweeps/tca.yaml
+++ b/sweeps/tca.yaml
@@ -1,7 +1,7 @@
 program: src/train.py
 method: bayes
 name: N_tca-soybean-maize
-entity: marleen-streicher
+entity: user
 project: hsr
 run_cap: 300
 command:
